// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu render renders transformed items 1`] = `
{
  "canToggleShowMore": false,
  "createURL": [Function],
  "cssClasses": {
    "count": "ais-Menu-count",
    "disabledShowMore": "ais-Menu-showMore--disabled",
    "item": "ais-Menu-item",
    "label": "ais-Menu-label",
    "link": "ais-Menu-link",
    "list": "ais-Menu-list",
    "noRefinementRoot": "ais-Menu--noRefinement",
    "root": "ais-Menu",
    "searchBox": "ais-Menu-searchBox",
    "searchable": {
      "form": "ais-SearchBox-form",
      "input": "ais-SearchBox-input",
      "loadingIcon": "ais-SearchBox-loadingIcon",
      "loadingIndicator": "ais-SearchBox-loadingIndicator",
      "reset": "ais-SearchBox-reset",
      "resetIcon": "ais-SearchBox-resetIcon",
      "root": "ais-SearchBox",
      "submit": "ais-SearchBox-submit",
      "submitIcon": "ais-SearchBox-submitIcon",
    },
    "selectedItem": "ais-Menu-item--selected",
    "showMore": "ais-Menu-showMore",
  },
  "depth": 0,
  "facetValues": [
    {
      "count": 456,
      "data": null,
      "exhaustive": true,
      "highlighted": "bar",
      "isRefined": false,
      "label": "bar",
      "transformed": true,
      "url": "#",
      "value": "bar",
    },
    {
      "count": 123,
      "data": null,
      "exhaustive": true,
      "highlighted": "foo",
      "isRefined": false,
      "label": "foo",
      "transformed": true,
      "url": "#",
      "value": "foo",
    },
  ],
  "hasExhaustiveItems": true,
  "isFromSearch": false,
  "isShowingMore": false,
  "searchBoxTemplateProps": {
    "templates": {
      "loadingIndicator": [Function],
      "reset": [Function],
      "submit": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "loadingIndicator": false,
      "reset": false,
      "submit": false,
    },
  },
  "searchFacetValues": undefined,
  "searchIsAlwaysActive": true,
  "searchPlaceholder": "Search...",
  "searchable": false,
  "showMore": undefined,
  "templateProps": {
    "templates": {
      "item": [Function],
      "searchableNoResults": [Function],
      "showMoreText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "item": false,
      "searchableNoResults": false,
      "showMoreText": false,
    },
  },
  "toggleRefinement": [Function],
  "toggleShowMore": [Function],
}
`;

exports[`menu render snapshot 1`] = `
{
  "canToggleShowMore": false,
  "createURL": [Function],
  "cssClasses": {
    "count": "ais-Menu-count",
    "disabledShowMore": "ais-Menu-showMore--disabled",
    "item": "ais-Menu-item",
    "label": "ais-Menu-label",
    "link": "ais-Menu-link",
    "list": "ais-Menu-list",
    "noRefinementRoot": "ais-Menu--noRefinement",
    "root": "ais-Menu",
    "searchBox": "ais-Menu-searchBox",
    "searchable": {
      "form": "ais-SearchBox-form",
      "input": "ais-SearchBox-input",
      "loadingIcon": "ais-SearchBox-loadingIcon",
      "loadingIndicator": "ais-SearchBox-loadingIndicator",
      "reset": "ais-SearchBox-reset",
      "resetIcon": "ais-SearchBox-resetIcon",
      "root": "ais-SearchBox",
      "submit": "ais-SearchBox-submit",
      "submitIcon": "ais-SearchBox-submitIcon",
    },
    "selectedItem": "ais-Menu-item--selected",
    "showMore": "ais-Menu-showMore",
  },
  "depth": 0,
  "facetValues": [
    {
      "count": 456,
      "data": null,
      "exhaustive": true,
      "highlighted": "bar",
      "isRefined": false,
      "label": "bar",
      "url": "#",
      "value": "bar",
    },
    {
      "count": 123,
      "data": null,
      "exhaustive": true,
      "highlighted": "foo",
      "isRefined": false,
      "label": "foo",
      "url": "#",
      "value": "foo",
    },
  ],
  "hasExhaustiveItems": true,
  "isFromSearch": false,
  "isShowingMore": false,
  "searchBoxTemplateProps": {
    "templates": {
      "loadingIndicator": [Function],
      "reset": [Function],
      "submit": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "loadingIndicator": false,
      "reset": false,
      "submit": false,
    },
  },
  "searchFacetValues": undefined,
  "searchIsAlwaysActive": true,
  "searchPlaceholder": "Search...",
  "searchable": false,
  "showMore": undefined,
  "templateProps": {
    "templates": {
      "item": [Function],
      "searchableNoResults": [Function],
      "showMoreText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "item": false,
      "searchableNoResults": false,
      "showMoreText": false,
    },
  },
  "toggleRefinement": [Function],
  "toggleShowMore": [Function],
}
`;
